[build-system]
requires = ["setuptools>=61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-queue"
version = "0.2.0"
description = "Queue Claude Code prompts and execute them when token limits reset."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Justin Cheah", email="justinwoody1234@gmail.com" }
]
dependencies = [
  "PyYAML >= 6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
claude_code_queue = ["py.typed", "skills/**/*"]

[project.scripts]
claude-queue = "claude_code_queue.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
